# acts

./: .gitignore  acts.cabal  changelog.md  devinfo.md  readme.md
examples/Acts/Examples/: MusicalIntervals.hs
src/Data/: Act.hs  Group.hs
src/Data/Group/: Cyclic.hs
